plain-yaml/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-name-dep
  namespace: my-app-namespace
spec:
  selector:
    matchLabels:
      run: my-app-name
  replicas: 1
  template:
    metadata:
      labels:
        run: my-app-name
    spec:
      containers:
      - name: my-app-name
        image: viniciusfcf/gitops-quarkus-app-jvm
        ports:
        - containerPort: 8800
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
