plain-yaml/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app-name-route
  namespace: my-app-namespace
spec:
  to:
    kind: Service
    name: my-app-name-svc
